@@ -22,39 +22,26 @@
  * under the License.
  * #L%
  */
-package co.elastic.apm.attach;
+package co.elastic.apm.agent.premain;
 
-import java.util.Objects;
+import java.lang.management.RuntimeMXBean;
+import java.util.List;
 
-class JvmInfo {
-    final String pid;
-    final String packageOrPathOrJvmProperties;
+public class VerifyNoneBootstrapCheck implements BootstrapCheck {
 
-    JvmInfo(String pid, String packageOrPathOrJvmProperties) {
-        this.pid = pid;
-        this.packageOrPathOrJvmProperties = packageOrPathOrJvmProperties;
-    }
+    private final RuntimeMXBean runtimeMXBean;
 
-    static JvmInfo parse(String jpsLine) {
-        final int firstSpace = jpsLine.indexOf(' ');
-        return new JvmInfo(jpsLine.substring(0, firstSpace), jpsLine.substring(firstSpace + 1));
+    public VerifyNoneBootstrapCheck(RuntimeMXBean runtimeMXBean) {
+        this.runtimeMXBean = runtimeMXBean;
     }
 
     @Override
-    public String toString() {
-        return pid + ' ' + packageOrPathOrJvmProperties;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        JvmInfo jvmInfo = (JvmInfo) o;
-        return pid.equals(jvmInfo.pid);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(pid);
+    public void doBootstrapCheck(BootstrapCheckResult result) {
+        List<String> inputArguments = runtimeMXBean.getInputArguments();
+        if (inputArguments.contains("-Xverify:none") || inputArguments.contains("-noverify")) {
+            result.addWarn("WARNING: -Xverify:none and -noverify are not supported by the Elastic APM Java Agent. " +
+                "In an upcoming version, the agent will not start when these flags are set, " +
+                "unless the system property elastic.apm.disable_bootstrap_checks is set to true.");
+        }
     }
 }
